Scan '_' as identifier rather than as token type underscore till source level 20. (#2010)
Fixes https://github.com/eclipse-jdt/eclipse.jdt.core/issues/2008